# docs-utils

./: .gitignore  Dockerfile  LICENSE  README.md  dependency.sh  pyproject.toml  template.tex
.github/workflows/: build-docker.yml
mdx_extensions/: __init__.py  remove_include.py  remove_references.py  replace_variables.py
pandoc_filters/: replace_variables.lua  svg_to_pdf.lua
stylesheets/: mkdocs_extra.css
