[project]
name = "xiangshan_docs_utils"
description = "A collection of Python-Markdown extensions for XiangShan document builds."
readme = "README.md"
version = "0.1.0"
authors = [
    { name = "Xu Zefan", email = "xuzefan@xiangshan.cc" }
]
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = [
    "markdown>=3.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mdx_extensions"]

[project.entry-points."markdown.extensions"]
remove_include = "mdx_extensions:RemoveIncludeExtension"
remove_references = "mdx_extensions:RemoveReferencesExtension"
replace_variables = "mdx_extensions:ReplaceVariablesExtension"
